css/style.css
h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: Poppins;
  margin-bottom: 50px;
  margin-top: 50px;
}

h4 a {
  color: purple;
  size: 40em;
}

p {
  font-family: Roboto;
  font-size: 18px;
}

h1 {
  font-size: 56px;
  margin-bottom: 25px;
}
h3 {
  font-size: 28px;
  margin: 10px;
}
h1,
h2 {
  color: #057bff;
}

#showcase {
  margin-top: 50px;
}

.navbar-expand-lg {
  background: #fff;
  font-family: Poppins;
}

.navbar-brand {
  font-size: 25px;
  font-weight: bold;
}

#showcase img {
  object-fit: cover;
  width: 90%;
  margin-right: 160px;
}

#showcase {
  font-size: 50px;
  margin-top: 100px;
}

.showcase-right {
  margin-top: 60px;
}

#about {
  background: #f1f1f1;
  padding: 50px 0 30px 0;
  text-align: center;
  margin-top: 40px;
  font-size: 30px;
  font-family: "Josefin Sans";
  color: black;
}

#projects {
  background: #f1f1f1;
  padding: 50px 0 30px 0;
  text-align: center;
  margin-top: 40px;
  font-size: 30px;
  font-family: "Josefin Sans";
  color: black;
}

#info1 {
  margin-top: 40px;
  padding: 50px 0 30px 0;
  text-align: center;
}

footer {
  padding: 30px;
}

ul {
  margin-top: 0px;
}

li {
  list-style-type: none;
  font-size: 20px;
}

